testsuite/tests/interpreter_errors/call_property_wrong_arity/test.out
main.adb

Error: Expected 1 arguments but got 2

print(names[1].referenced_decl(true, 1))
                               ^^^^^^^^ 

